// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when isContextualSearchPending matches snapshot, renders LoadingBarContent 1`] = `
.c8 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 1.0714285714285714em;
  height: 40px;
  line-height: 38px;
  font-size: 14px;
  background-color: #1f73b7;
  color: #fff;
}

.c23::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c23:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23:focus {
  outline: none;
}

.c23[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23:active,
.c23[aria-pressed='true'],
.c23[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23:hover {
  background-color: #144a75;
}

.c23[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c23:active {
  background-color: #0f3554;
}

.c23[aria-pressed='true'],
.c23[aria-pressed='mixed'] {
  background-color: #0f3554;
}

.c23:disabled {
  background-color: #cee2f2;
  color: #5293c7;
}

.c23:disabled {
  cursor: default;
}

.c23 .c7 {
  width: 16px;
  min-width: 16px;
  height: 16px;
}

.c24 .c23 {
  position: relative;
  margin-left: -1px;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c24 .c23:hover,
.c24 .c23:active {
  z-index: 1;
}

.c24 .c23:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c24 .c23:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-left-width: 0;
}

.c24 .c23:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-right-width: 0;
}

.c24 .c23:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 0.9166666666666666em;
  height: 32px;
  line-height: 30px;
  font-size: 12px;
  background-color: transparent;
  color: #1f73b7;
  border: none;
  padding: 0;
  width: 32px;
  color: #68737d;
}

.c6::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:focus {
  outline: none;
}

.c6[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background-color: rgba(31,115,183,0.08);
  color: #144a75;
}

.c6[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  background-color: rgba(31,115,183,0.2);
  color: #0f3554;
}

.c6:disabled {
  border-color: transparent;
  background-color: #cee2f2;
  color: #5293c7;
}

.c6:disabled {
  cursor: default;
}

.c6 .c7 {
  width: 12px;
  min-width: 12px;
  height: 12px;
}

.c24 .c6 {
  position: relative;
  margin-left: -1px;
}

.c24 .c6:hover,
.c24 .c6:active {
  z-index: 1;
}

.c24 .c6:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c24 .c6:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c24 .c6:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c24 .c6:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6:hover {
  color: #49545c;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  color: #2f3941;
}

.c6 .c7 {
  width: 16px;
  height: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c9:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5 {
  width: 2rem;
  height: 2rem;
}

.c5 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c5 svg,
.c5 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c5:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c5:hover {
  background: #227EC9 !important;
}

.c14 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c14::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c14::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c14::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c18 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c20 {
  position: relative;
  display: inline-block;
}

.c20 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c20 svg:hover path,
.c20 svg:active path,
.c20 svg:focus path {
  fill: #68737d;
}

.c20 svg path {
  fill: #87929d;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  padding: 0 0.7142857142857143rem 0.35714285714285715rem;
}

.c13 {
  color: #c2c8cc !important;
  height: 1.3714285714285714rem !important;
  width: 1.3714285714285714rem !important;
}

.c12 {
  margin-top: 0.2857142857142857rem;
}

.c12 > div > div > div {
  max-height: unset;
}

.c11 {
  margin-bottom: 0;
}

.c21 {
  position: relative !important;
}

.c22 {
  max-width: 14.285714285714286rem;
}

.c15 {
  text-align: center !important;
  color: #2f3941;
  font-size: 1.0714285714285714rem;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  margin-bottom: 0 !important;
  margin-top: 1.4285714285714286 !important;
}

.c17 {
  color: #68737d;
  margin-bottom: 1.4285714285714286 !important;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            pageTitle
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 c6"
            data-garden-id="buttons.icon_button"
            data-garden-version="8.13.0"
            type="button"
          >
            <svg
              class="c7 c8"
              data-garden-id="buttons.icon"
              data-garden-version="8.13.0"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
              theme="[object Object]"
            />
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
            data-testid="page-header-container"
          >
            <form
              class="c11"
              novalidate=""
            >
              <div
                class="c12"
              >
                <div
                  class="text__c-txt___Uzv-G range__c-range___1aYaS "
                >
                  <div
                    aria-invalid="false"
                    class="-div text__c-txt__input___38pRd text__c-txt__input--media___1dY36 text__is-focused___26DQb "
                    data-garden-id="forms.media_input"
                    data-garden-version="7.1.10"
                  >
                    <div
                      class="text__c-txt__input--media__figure___gBDfx "
                    >
                      <svg
                        aria-hidden="true"
                        class="c13"
                        data-testid="Icon--search"
                        focusable="false"
                        realfilename="search-stroke.svg"
                        role="presentation"
                      />
                    </div>
                    <input
                      aria-invalid="false"
                      aria-labelledby="2val-field_1.3.3--label"
                      autocapitalize="off"
                      class="text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV text__c-txt__input--media__body___11J0_ "
                      data-testid="search-field"
                      id="2val-field_1.3.3--input"
                      placeholder="How can we help?"
                      type="search"
                      value=""
                    />
                    <div
                      class="text__c-txt__input--media__figure___gBDfx "
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="c14"
        data-testid="scroll-container-content"
      >
        <div
          class="c15"
        >
          <p
            class="c16"
          >
            There are no results for ""
          </p>
          <p
            class="c17"
          >
            Try searching for something else.
          </p>
        </div>
      </div>
      <footer
        class="c18"
      >
        <div
          class="c19"
        >
          <a
            class="c20"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <div
            class="c21"
          >
            <div
              class="container buttonRight "
            >
              <button
                class="c22 c23"
                data-garden-id="buttons.button"
                data-garden-version="8.13.0"
                type="button"
              >
                Leave us a message
              </button>
            </div>
          </div>
        </div>
      </footer>
      <div>
        NotificationPopup
      </div>
    </div>
  </div>
</div>
`;

exports[`render when not isContextualSearchPending matches snapshot, renders NoResults 1`] = `
.c8 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 1.0714285714285714em;
  height: 40px;
  line-height: 38px;
  font-size: 14px;
  background-color: #1f73b7;
  color: #fff;
}

.c23::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c23:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23:focus {
  outline: none;
}

.c23[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23:active,
.c23[aria-pressed='true'],
.c23[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c23:hover {
  background-color: #144a75;
}

.c23[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c23:active {
  background-color: #0f3554;
}

.c23[aria-pressed='true'],
.c23[aria-pressed='mixed'] {
  background-color: #0f3554;
}

.c23:disabled {
  background-color: #cee2f2;
  color: #5293c7;
}

.c23:disabled {
  cursor: default;
}

.c23 .c7 {
  width: 16px;
  min-width: 16px;
  height: 16px;
}

.c24 .c23 {
  position: relative;
  margin-left: -1px;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c24 .c23:hover,
.c24 .c23:active {
  z-index: 1;
}

.c24 .c23:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c24 .c23:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-left-width: 0;
}

.c24 .c23:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-right-width: 0;
}

.c24 .c23:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 0.9166666666666666em;
  height: 32px;
  line-height: 30px;
  font-size: 12px;
  background-color: transparent;
  color: #1f73b7;
  border: none;
  padding: 0;
  width: 32px;
  color: #68737d;
}

.c6::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:focus {
  outline: none;
}

.c6[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background-color: rgba(31,115,183,0.08);
  color: #144a75;
}

.c6[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  background-color: rgba(31,115,183,0.2);
  color: #0f3554;
}

.c6:disabled {
  border-color: transparent;
  background-color: #cee2f2;
  color: #5293c7;
}

.c6:disabled {
  cursor: default;
}

.c6 .c7 {
  width: 12px;
  min-width: 12px;
  height: 12px;
}

.c24 .c6 {
  position: relative;
  margin-left: -1px;
}

.c24 .c6:hover,
.c24 .c6:active {
  z-index: 1;
}

.c24 .c6:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c24 .c6:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c24 .c6:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c24 .c6:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6:hover {
  color: #49545c;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  color: #2f3941;
}

.c6 .c7 {
  width: 16px;
  height: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c9:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5 {
  width: 2rem;
  height: 2rem;
}

.c5 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c5 svg,
.c5 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c5:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c5:hover {
  background: #227EC9 !important;
}

.c14 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c14::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c14::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c14::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c18 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c20 {
  position: relative;
  display: inline-block;
}

.c20 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c20 svg:hover path,
.c20 svg:active path,
.c20 svg:focus path {
  fill: #68737d;
}

.c20 svg path {
  fill: #87929d;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  padding: 0 0.7142857142857143rem 0.35714285714285715rem;
}

.c13 {
  color: #c2c8cc !important;
  height: 1.3714285714285714rem !important;
  width: 1.3714285714285714rem !important;
}

.c12 {
  margin-top: 0.2857142857142857rem;
}

.c12 > div > div > div {
  max-height: unset;
}

.c11 {
  margin-bottom: 0;
}

.c21 {
  position: relative !important;
}

.c22 {
  max-width: 14.285714285714286rem;
}

.c15 {
  text-align: center !important;
  color: #2f3941;
  font-size: 1.0714285714285714rem;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  margin-bottom: 0 !important;
  margin-top: 1.4285714285714286 !important;
}

.c17 {
  color: #68737d;
  margin-bottom: 1.4285714285714286 !important;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
          >
            pageTitle
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 c6"
            data-garden-id="buttons.icon_button"
            data-garden-version="8.13.0"
            type="button"
          >
            <svg
              class="c7 c8"
              data-garden-id="buttons.icon"
              data-garden-version="8.13.0"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
              theme="[object Object]"
            />
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
            data-testid="page-header-container"
          >
            <form
              class="c11"
              novalidate=""
            >
              <div
                class="c12"
              >
                <div
                  class="text__c-txt___Uzv-G range__c-range___1aYaS "
                >
                  <div
                    aria-invalid="false"
                    class="-div text__c-txt__input___38pRd text__c-txt__input--media___1dY36 text__is-focused___26DQb "
                    data-garden-id="forms.media_input"
                    data-garden-version="7.1.10"
                  >
                    <div
                      class="text__c-txt__input--media__figure___gBDfx "
                    >
                      <svg
                        aria-hidden="true"
                        class="c13"
                        data-testid="Icon--search"
                        focusable="false"
                        realfilename="search-stroke.svg"
                        role="presentation"
                      />
                    </div>
                    <input
                      aria-invalid="false"
                      aria-labelledby="1val-field_1.3.3--label"
                      autocapitalize="off"
                      class="text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV text__c-txt__input--media__body___11J0_ "
                      data-testid="search-field"
                      id="1val-field_1.3.3--input"
                      placeholder="How can we help?"
                      type="search"
                      value=""
                    />
                    <div
                      class="text__c-txt__input--media__figure___gBDfx "
                    />
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="c14"
        data-testid="scroll-container-content"
      >
        <div
          class="c15"
        >
          <p
            class="c16"
          >
            There are no results for ""
          </p>
          <p
            class="c17"
          >
            Try searching for something else.
          </p>
        </div>
      </div>
      <footer
        class="c18"
      >
        <div
          class="c19"
        >
          <a
            class="c20"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            tabindex="-1"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <div
            class="c21"
          >
            <div
              class="container buttonRight "
            >
              <button
                class="c22 c23"
                data-garden-id="buttons.button"
                data-garden-version="8.13.0"
                type="button"
              >
                Leave us a message
              </button>
            </div>
          </div>
        </div>
      </footer>
      <div>
        NotificationPopup
      </div>
    </div>
  </div>
</div>
`;
